test_programs/compile_failure/noirc_frontend_tests_turbofish_use_generic_type_alias_with_turbofish_in_method_call_errors/src/main.nr

        pub struct Foo<T> {
            x: T,
        }

        impl<T> Foo<T> {
            fn new(x: T) -> Self {
                Foo { x }
            }
        }

        type Bar<T> = Foo<T>;

        fn main() {
            let _ = Bar::<i32>::new(true);
        }
    